# mantis_model_iteration_tool

./: API_REFERENCE_TEMPLATE.md  API_guide.md  CONTRIBUTING.md  Dockerfile  GUIDE.md  LICENSE  README.md  SECURITY.md  __init__.py  agent_runner.py  block_sync.py  coinglass.py  data.py  data_cache.py  encryption.py  evaluator.py  example_binary.py  featurizer.py  gui.py  inferencer.py  install_reqs.sh  miner.py  pyproject.toml  r2_comms.py  requirements.txt  salience_estimator.py  sandbox.py  targon_deploy.py  targon_server.py  test_auth.py  test_model_iteration_tool.py  test_playground.py  utils.py
targon_eval/: DEPLOY.md  Dockerfile  __init__.py  server.py  targon_app.py
templates/: base.html  dashboard.html
